--- a/creditors_master/templates/creditors_master/creditors_detail.html
+++ b/creditors_master/templates/creditors_master/creditors_detail.html
@@ -3,6 +3,7 @@
 <ul>
     <h3 class="profile-username text-center"> Creditors Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
+                <div>
 
                     <li class="list-group-item">
                     <b> First Name: </b> <a class="float-right">{{ object.first_name }}</a>
@@ -76,6 +77,7 @@
                     <b>Creation Date: </b> <a class="float-right">{{ object.creation_date }}</a>
                     </li>
 
+                </div>
                 </ul>
 </ul>
 {% endblock %}
