--- a/creditors_payment/templates/creditors_payment/payment_detail.html
+++ b/creditors_payment/templates/creditors_payment/payment_detail.html
@@ -3,7 +3,7 @@
 <ul>
     <h3 class="profile-username text-center" align="center"> Creditors Payment Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
-
+                <div>
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -40,7 +40,7 @@
                     <b> ID Of Online Transaction: </b> <a class="float-right">{{ object.reffrence }}</a>
                     </li>
 
-
+                </div>
                 </ul>
 </ul>
 {% endblock %}
