--- a/employee_payment/templates/employee_payment/employee_p_detail.html
+++ b/employee_payment/templates/employee_payment/employee_p_detail.html
@@ -3,7 +3,7 @@
 <ul>
     <h3 class="profile-username text-center" align="center"> Employees Payment Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
-
+                <div>
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -47,7 +47,7 @@
                     <li class="list-group-item">
                     <b> Salary: </b> <a class="float-right">{{ object.salary }}</a>
                     </li>
-
+                </div>
                 </ul>
 </ul>
 {% endblock %}
