--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_detail.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_detail.html
@@ -4,7 +4,8 @@
     <h3 class="profile-username text-center" align="center"> Nozzlle Transaction Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
 
-                    <li class="list-group-item">
+                    <div>
+                        <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
 
@@ -87,6 +88,8 @@
                     <li class="list-group-item">
                     <b> Closing Of Diesel in Literes: </b> <a class="float-right">{{ object.closing_lit_Diesel }}</a>
                     </li>
+
+                    </div>
 
                 </ul>
 </ul>
