--- a/suppliers_master/templates/suppliers_master/suppliers_detail.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_detail.html
@@ -3,7 +3,7 @@
 <ul>
     <h3 class="profile-username text-center" align="center"> Suppliers Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
-
+                <div>
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -32,7 +32,7 @@
                     <b> Transportation Expense: </b> <a class="float-right">{{ object.transportation_expense }}</a>
                     </li>
 
-
+                </div>
                 </ul>
 </ul>
 {% endblock %}
