--- a/tank_master/templates/tank_master/tank_detail.html
+++ b/tank_master/templates/tank_master/tank_detail.html
@@ -3,7 +3,7 @@
 
     <h3 class="profile-username text-center"> Tank Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
-
+                <div>
                     <li class="list-group-item">
                     <b>Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -32,6 +32,7 @@
                     <b>Loss Of Diesel in Price: </b> <a class="float-right">{{ object.loss_diesel_price }}</a>
                     </li>
 
+                </div>
 
                 </ul>
 
