--- a/calculation_master/templates/calculation_master/calculation_detail.html
+++ b/calculation_master/templates/calculation_master/calculation_detail.html
@@ -3,8 +3,9 @@
 <ul>
     <h3 class="profile-username text-center" align="center"> Calculation Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
+                    <div>
 
-                    <li class="list-group-item">
+                        <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
 
@@ -31,6 +32,9 @@
                     <li class="list-group-item">
                     <b> Name Of Driver: </b> <a class="float-right">{{ object.loss_in_diesel }}</a>
                     </li>
+
+
+                    </div>
 
                 </ul>
 </ul>
