--- a/calculation_master/templates/calculation_master/calculation_list.html
+++ b/calculation_master/templates/calculation_master/calculation_list.html
@@ -31,9 +31,15 @@
                             <td>{{ calculation.tank_opening }}</td>
                             <td>{{ calculation.tank_closing }}</td>
                             <td>
-                                <a href="{% url 'calculation-update'  calculation.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'calculation-detail'  calculation.id %}" class="btn btn-info"> Detail</a>
-                                <a href="{% url 'calculation-delete'  calculation.id %}" class="btn btn-danger"> Delete</a>
+                                <a href="{% url 'calculation-update'  calculation.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'calculation-detail'  calculation.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'calculation-delete'  calculation.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
