--- a/client/templates/client/layout.html
+++ b/client/templates/client/layout.html
@@ -210,7 +210,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-file-invoice-dollar"></i>
               <p>
                 Rate
                 <i class="right fas fa-angle-left"></i>
@@ -238,7 +238,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-oil-can"></i>
               <p>
                 Tank Master
                 <i class="right fas fa-angle-left"></i>
@@ -264,7 +264,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-gas-pump"></i>
               <p>
                 Nozzlle Master
                 <i class="right fas fa-angle-left"></i>
@@ -290,7 +290,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-gas-pump"></i>
               <p>
                 Nozzlle Transaction
                 <i class="right fas fa-angle-left"></i>
@@ -316,7 +316,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-calculator"></i>
               <p>
                 Calculation
                 <i class="right fas fa-angle-left"></i>
@@ -342,7 +342,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-user-edit"></i>
               <p>
                 Employee Master
                 <i class="right fas fa-angle-left"></i>
@@ -368,7 +368,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-money-bill"></i>
               <p>
                 Employee Payment Details
                 <i class="right fas fa-angle-left"></i>
@@ -395,7 +395,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-users"></i>
               <p>
                 Creditors Master
                 <i class="right fas fa-angle-left"></i>
@@ -422,7 +422,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-file-invoice-dollar"></i>
               <p>
                 Creditors Transaction
                 <i class="right fas fa-angle-left"></i>
@@ -449,7 +449,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-money-bill"></i>
               <p>
                 Creditors Payment
                 <i class="right fas fa-angle-left"></i>
@@ -476,7 +476,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-edit"></i>
               <p>
                 Creditors Vehicle Details
                 <i class="right fas fa-angle-left"></i>
@@ -503,7 +503,7 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-edit"></i>
               <p>
                 Suppliers Details
                 <i class="right fas fa-angle-left"></i>
@@ -524,14 +524,14 @@
                     </a>
                   </li>
               </ul>
-
-
-                <div>
-                <i class="nav-icon fas fa-th">
-                     <a href="logout" alert="btn-btn-danger">Logout</a>
-                </i>
-                </div>
-
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'logout' %}" class="nav-link">
+              <i class="nav-icon fas fa-power-off"></i>
+              <p>
+                  Logout
+              </p>
+                </a>
             </li>
 
 
