--- a/creditors_master/templates/creditors_master/creditors_form.html
+++ b/creditors_master/templates/creditors_master/creditors_form.html
@@ -14,6 +14,7 @@
               {% csrf_token %}
             <!-- /.form group -->
                     <hr/>
+              <div>
                      <div class="row">
 
                          <div class="form-group col-lg-4 col-lg-4">
@@ -295,7 +296,10 @@
                             {% endif %}
                         </div>
                       </div>
+
                     </div>
+
+              </div>
                   <div class="card-footer" align="center">
                   <button type="submit" class="btn btn-primary">Submit</button>
 
