--- a/creditors_master/templates/creditors_master/creditors_list.html
+++ b/creditors_master/templates/creditors_master/creditors_list.html
@@ -33,9 +33,15 @@
                             <td>{{ creditors.last_name }}</td>
                             <td>{{ creditors.company_name }}</td>
                             <td>
-                                <a href="{% url 'creditors-update'  creditors.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'creditors-delete'  creditors.id %}" class="btn btn-danger"> Delete</a>
-                                <a href="{% url 'creditors-detail'  creditors.id %}" class="btn btn-info"> Detail</a>
+                                <a href="{% url 'creditors-update'  creditors.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'creditors-detail'  creditors.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'creditors-delete'  creditors.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
