--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
@@ -3,7 +3,7 @@
 <ul>
     <h3 class="profile-username text-center" align="center"> Creditors Transaction Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
-
+                <div>
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -35,7 +35,7 @@
                     <li class="list-group-item">
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
-
+                </div>
                 </ul>
 </ul>
 {% endblock %}
