--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_list.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_list.html
@@ -31,9 +31,15 @@
                             <td>{{ creditor_transaction.vehicle_master }}</td>
                             <td>{{ creditor_transaction.nozzlle_master }}</td>
                             <td>
-                                <a href="{% url 'creditor_transaction-update'  creditor_transaction.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'creditor_transaction-delete'  creditor_transaction.id %}" class="btn btn-danger"> Delete</a>
-                                <a href="{% url 'creditor_transaction-detail'  creditor_transaction.id %}" class="btn btn-info"> Detail</a>
+                                <a href="{% url 'creditor_transaction-update'  creditor_transaction.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'creditor_transaction-detail'  creditor_transaction.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'creditor_transaction-delete'  creditor_transaction.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
