--- a/employee_master/templates/employee_master/employee_list.html
+++ b/employee_master/templates/employee_master/employee_list.html
@@ -69,9 +69,15 @@
 {#                            <td>{{ employee.expected_salary }}</td>#}
 {#                                <td>{{ employee.photo }}</td>#}
                             <td>
-                                <a href="{% url 'employee-update'  employee.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'employee-delete'  employee.id %}" class="btn btn-danger"> Delete</a>
-                                <a href="{% url 'employee-detail' employee.id %}" class="btn btn-info"> Detail</a>
+                                <a href="{% url 'employee-update'  employee.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'employee-detail' employee.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'employee-delete'  employee.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
