--- a/employee_payment/templates/employee_payment/employee_p_list.html
+++ b/employee_payment/templates/employee_payment/employee_p_list.html
@@ -29,9 +29,15 @@
                             <td>{{ employee_p.date }}</td>
                             <td>{{ employee_p.employee_master.first_name }}</td>
                             <td>
-                                <a href="{% url 'employee_payment-update'  employee_p.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'employee_payment-delete'  employee_p.id %}" class="btn btn-danger"> Delete</a>
-                                <a href="{% url 'employee_payment-detail'  employee_p.id %}" class="btn btn-info"> Detail</a>
+                                <a href="{% url 'employee_payment-update'  employee_p.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'employee_payment-detail'  employee_p.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'employee_payment-delete'  employee_p.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
