--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_list.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_list.html
@@ -31,9 +31,15 @@
                             <td>{{ nozzlle_t.nozzlle_master }}</td>
                             <td>{{ nozzlle_t.employee_master }}</td>
                             <td>
-                                <a href="{% url 'nozzlle_transaction-update'  nozzlle_t.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'nozzlle_transaction-detail'  nozzlle_t.id %}" class="btn btn-info"> Detail</a>
-                                <a href="{% url 'nozzlle_transaction-delete'  nozzlle_t.id %}" class="btn btn-danger"> Delete</a>
+                                <a href="{% url 'nozzlle_transaction-update'  nozzlle_t.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'nozzlle_transaction-detail'  nozzlle_t.id %}" class="btn btn-success">
+                                    <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'nozzlle_transaction-delete'  nozzlle_t.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                </a>
                             </td>
                         </tr>
                     {% endfor %}
