--- a/tank_master/templates/tank_master/tank_list.html
+++ b/tank_master/templates/tank_master/tank_list.html
@@ -43,9 +43,14 @@
 {#                            <td>{{ tank.loss_petrol_price }}</td>#}
 {#                            <td>{{ tank.loss_diesel_price }}</td>#}
                             <td>
-                                <a href="{% url 'tank-update'  tank.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'tank-detail'  tank.id %}" class="btn btn-info"> Detail</a>
-                                <a href="{% url 'tank-delete'  tank.id %}" class="btn btn-danger"> Delete</a>
+                                <a href="{% url 'tank-update'  tank.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'tank-detail'  tank.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'tank-delete'  tank.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete</a>
                             </td>
                         </tr>
                     {% endfor %}
