--- a/vehicle_master/templates/vehicle_master/vehicle_detail.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_detail.html
@@ -3,7 +3,7 @@
 <ul>
     <h3 class="profile-username text-center" align="center"> Creditors Vehicle Details </h3>
                 <ul class="list-group list-group-unbordered mb-3">
-
+                <div>
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -32,6 +32,7 @@
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
 
+                </div>
                 </ul>
 </ul>
 {% endblock %}
