--- a/vehicle_master/templates/vehicle_master/vehicle_list.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_list.html
@@ -29,9 +29,15 @@
                             <td>{{ vehicle.date }}</td>
                             <td>{{ vehicle.creditors_master }}</td>
                             <td>
-                                <a href="{% url 'vehicle-update'  vehicle.id %}" class="btn btn-info"> update</a>
-                                <a href="{% url 'vehicle-delete'  vehicle.id %}" class="btn btn-danger"> Delete</a>
-                                <a href="{% url 'vehicle-detail'  vehicle.id %}" class="btn btn-info"> Detail</a>
+                                <a href="{% url 'vehicle-update'  vehicle.id %}" class="btn btn-info">
+                                   <li class="fas fa-pencil-alt"></li> Edit
+                                </a>
+                                <a href="{% url 'vehicle-detail'  vehicle.id %}" class="btn btn-success">
+                                   <li class="fas fa-file-invoice"></li> Detail
+                                </a>
+                                <a href="{% url 'vehicle-delete'  vehicle.id %}" class="btn btn-danger">
+                                   <li class="fas fa-trash-alt"></li> Delete
+                                    </a>
                             </td>
                         </tr>
                     {% endfor %}
